# zrd

./: Cargo.toml  FEATURES.md  KEYBOARD_DEBUG.md  README.md  REFACTOR_PLAN.md  STATUS.md  TERMINAL_CONFIG.md  TEST_SELECTIONS.md  test-scroll.txt
.claude/agents/: rust-gui-wordprocessing-expert.md
.github/workflows/: release.yml
docs/plans/: crates-io-publish-plan.md  rename-zlyph-to-zrd-plan.md  tui-mouse-support-plan.md
src/: editor.rs  main.rs  text_buffer.rs  theme.rs
zlyph-core/: Cargo.toml
zlyph-core/src/: actions.rs  engine.rs  lib.rs  state.rs
zlyph-core/tests/: engine_tests.rs
zlyph-gpui/: Cargo.toml  FEATURES.md
zlyph-gpui/src/: actions.rs  editor.rs  main.rs  text_buffer.rs
zlyph-tui/: Cargo.toml
zlyph-tui/src/: main.rs
zrd/: Cargo.toml
zrd-core/: Cargo.toml
zrd-core/src/: actions.rs  engine.rs  lib.rs  state.rs
zrd-core/tests/: engine_tests.rs
zrd-gpui/: Cargo.toml  FEATURES.md  TEST_LIVE_RELOAD.md  USAGE.md
zrd-gpui/src/: editor.rs
zrd-gui/: Cargo.toml  FEATURES.md  TEST_LIVE_RELOAD.md  USAGE.md
zrd-gui/src/: actions.rs  editor.rs  editor_old.rs  main.rs  theme.rs
zrd-tui/: Cargo.toml
zrd-tui/src/: main.rs
zrd/src/: main.rs
