[package]
name = "dright"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
hyphenation = "0.8"

[profile.dev]
opt-level = 3

[profile.release]
lto = "thin"
