[workspace]
members = [
    "zlyph-core",
    "zlyph-gpui",
    "zlyph-tui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Doug Lance"]
license = "MIT"
repository = "https://github.com/douglance/zlyph"

[profile.dev]
opt-level = 3

[profile.release]
lto = "thin"
