[package]
name = "zlyph-gpui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A minimal text editor built with GPUI"
keywords = ["editor", "text-editor", "gpui"]
categories = ["text-editors"]

[[bin]]
name = "zlyph"
path = "src/main.rs"

[dependencies]
zlyph-core = { path = "../zlyph-core" }
gpui = { git = "https://github.com/zed-industries/zed" }
