[package]
name = "zrd-gpui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A minimal text editor built with GPUI"
keywords = ["editor", "text-editor", "gpui"]
categories = ["text-editors"]

[[bin]]
name = "zrd-gui"
path = "src/main.rs"

[dependencies]
zrd-core = { path = "../zrd-core" }
gpui = "0.2"
