[package]
name = "zrd-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A minimal text editor built with GPUI"
keywords = ["editor", "text-editor", "gpui"]
categories = ["text-editors"]

[[bin]]
name = "zrd-gui"
path = "src/main.rs"

[dependencies]
zrd-core = { version = "0.1.0", path = "../zrd-core" }
gpui = "0.2"
