[package]
name = "zrd-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A minimal text editor with terminal UI (ratatui)"

[[bin]]
name = "zrd"
path = "src/main.rs"

[dependencies]
zrd-core = { path = "../zrd-core" }
ratatui = "0.26"
crossterm = "0.27"
anyhow = "1.0"
notify = "6.1"
